--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: black;
-    padding: 10%;
+    padding: 5% 0% 5% 0%;
+    max-height: 100vh;
+    max-width: 100vw;
 }
 
 #container {
@@ -8,24 +10,139 @@ body {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 5fr;
-    height: 100vw;
+    height: 100vh;
     width: 100vw;
 }
 
 #sidebar {
-    background-color: lightskyblue;
+    background-color: #0ea5e9;
     color: white;
     display: grid;
     grid-row: 1 / 6;
+    grid-template-rows: 1fr 6fr 3fr 10fr;
+    gap:6vw;
+    padding-top: 2vw;
+    padding-left: 4vw;
 }
 
 #header {
     background-color: white;
     display: grid;
     grid-column: 2 / 5;
+    grid-template-rows: 1fr 1fr;
+    padding: 1vw 2vw;
 }
 
 #main-content {
+    display: grid;
     background-color: lightgrey;
     grid-area: 2 / 2 / 6 / 5;
+    grid-template-columns: 6fr 2fr;
+    gap: 4px;
+}
+
+#sidebar > * {
+    display: grid;
+    gap: 4px;
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+
+#sidebar > #sidebarHead {
+    font-size: 3vw;
+    padding: none;
+    overflow: none;
+}
+
+.topRow {
+    display: grid;
+    grid-template-columns: 1fr 10fr 1fr 1fr 2fr;
+}
+
+.secondRow {
+    display: grid;
+    grid-template-columns: 2fr 10fr 7fr;
+}
+
+.secondRow:last-child > * {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 3px;
+}
+
+#leftSec {
+    display: grid;
+    grid-template-rows: 5% 95%;
+    gap: 3px;
+    padding: 0px 10px;
+}
+
+
+#leftSec > #projectBoxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: auto;
+    gap: 40px;
+}
+
+.projectBox {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 2px 2px 0px 0px grey;
+}
+
+#rightSec {
+    display: grid;
+    grid-template-rows: 5% 45% 5% 45%;
+    padding: 0px 10px;
+    gap: 4px;
+}
+
+#rightSec > #siteAnnounce, #trends {
+    display: grid;
+    border-radius: 5px;
+    background-color: white;
+    text-align: center;
+    box-shadow: 2px 2px 0px 0px grey;
+}
+
+.docs {
+    background-color: #0ea5e9;
+    color: white;
+    border-radius: 15px;
+    box-shadow: none;
+    border: none;
+    width: 8vw;
+    height: 3vh;
+}
+
+svg {
+    max-width: 2.5vw;
+    max-height: 2.5vh;
+}
+
+#search > button > svg {
+    width: 2vw;
+    height: 2vh;
+    border: none;
+}
+
+button {
+    border: none;
+    background-color: white;
+}
+
+#notify > button > svg {
+    width: 3vw;
+    height: 3vh;
+}
+
+#profilePic > svg {
+    width: 100px;
+    height: 100px;
+}
+
+#profileBig > svg {
+    width: 150%;
+    height: 150%;
 }
